tests/param_runs_missing_type.stderr
tests/param_runs_missing_type.sl:2:23: error: SL1008: parameter 'c' is missing type
